--- a/traces/docker_stf_trace_gen/environment/spike/board.yaml
+++ b/traces/docker_stf_trace_gen/environment/spike/board.yaml
@@ -1,115 +1,118 @@
-# Board Configuration for Spike RISC-V Simulator
-# YAML format with hierarchical structure
+schema: 2
 
-# Board identification and defaults  
-board: spike
-defaults:
-  cc: riscv32-unknown-elf-gcc
-  cpu_mhz: 1
-  warmup_heat: 1
-  defines: ["CPU_MHZ=1", "WARMUP_HEAT=1"]
+# ---------- Variables ----------
+variables:
+  workloads_roots:
+    - "/workloads"
+    - "/default"
+  env_root: "/default/environment/{board}"
+  outputs_root: "/outputs/{emulator}/bin"
+  include_auto: []   # add any global include dirs here if you like
+  alt_roots:
+    # If a path starting with /workloads/... doesn't exist, try /default/...
+    - { from: "/workloads/", to: "/default/" }
 
-# Architecture and platform specific configurations
-architectures:
+# ---------- Toolchains ----------
+toolchains:
   rv32:
-    platforms:
-      baremetal:
-        cc: riscv32-unknown-elf-gcc
-        arch: rv32imafdc
-        abi: ilp32d
-        base_cflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-mcmodel=medany", "-mno-relax", "-mstrict-align"]
-        base_ldflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-nostartfiles", "-Wl,--no-warn-rwx-segments"]
-        linker_script: link.ld
-        libs: ["-lc", "-lm"]
-        includes: []
-      
-      linux:
-        cc: riscv32-unknown-linux-gnu-gcc
-        arch: rv32imafdc
-        abi: ilp32d
-        base_cflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-static", "-O2"]
-        base_ldflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-static"]
-        libs: ["-lm"]
-        includes: []
+    baremetal:
+      cc: riscv32-unknown-elf-gcc
+      base_cflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-mcmodel=medany", "-mno-relax", "-mstrict-align"]
+      base_ldflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-nostartfiles", "-Wl,--no-warn-rwx-segments"]
+      libs: ["-lc", "-lm"]
+      linker_script: "link.ld"
+
+    linux:
+      cc: riscv32-unknown-linux-gnu-gcc
+      base_cflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-static", "-O2"]
+      base_ldflags: ["-march=rv32imafdc", "-mabi=ilp32d", "-static"]
+      libs: ["-lm"]
+      linker_script: null
 
   rv64:
+    baremetal:
+      cc: riscv64-unknown-elf-gcc
+      base_cflags: ["-march=rv64imafdc", "-mabi=lp64d", "-mcmodel=medany", "-mno-relax", "-mstrict-align"]
+      base_ldflags: ["-march=rv64imafdc", "-mabi=lp64d", "-nostartfiles", "-Wl,--no-warn-rwx-segments"]
+      libs: ["-lc", "-lm"]
+      linker_script: "link.ld"
+
+    linux:
+      cc: riscv64-linux-gnu-gcc
+      base_cflags: ["-march=rv64imafdc", "-mabi=lp64d", "-static", "-O2"]
+      base_ldflags: ["-march=rv64imafdc", "-mabi=lp64d", "-static"]
+      libs: ["-lm"]
+      linker_script: null
+
+# ---------- Features ----------
+features:
+  bbv:
+    cflags: ["-DBBV"]
+    ldflags: []
+  trace:
+    cflags: ["-DTRACE"]
+    ldflags: []
+
+# ---------- Workloads ----------
+workloads:
+
+  embench-iot:
+    # Pure YAML: structure, what to compile, where from.
+    layout:
+      mode: per_benchmark
+      per_benchmark:
+        bench_root: "{workload_root}/src"
+        source_patterns: ["*.c"]
+        exclude_dirs: []
+      support_per_benchmark_patterns:
+        - "{workload_root}/support/beebsc.c"
+    includes:
+      - "{workload_root}/support"
+      - "{workload_root}/env"
+    defines: ["CPU_MHZ=1", "WARMUP_HEAT=1", "true=1", "false=0"]
+    cflags: []
+    ldflags: []
+    libs: []
+    env:
+      files: ["crt0.S", "main.c", "stub.c", "util.c"]
+      skip: false
+
     platforms:
-      baremetal:
-        cc: riscv64-unknown-elf-gcc
-        arch: rv64imafdc
-        abi: lp64d
-        base_cflags: ["-march=rv64imafdc", "-mabi=lp64d", "-mcmodel=medany", "-mno-relax", "-mstrict-align"]
-        base_ldflags: ["-march=rv64imafdc", "-mabi=lp64d", "-nostartfiles", "-Wl,--no-warn-rwx-segments"]
-        linker_script: link.ld
-        libs: ["-lc", "-lm"]
-        includes: []
-      
       linux:
-        cc: riscv64-linux-gnu-gcc
-        arch: rv64imafdc
-        abi: lp64d
-        base_cflags: ["-march=rv64imafdc", "-mabi=lp64d", "-static", "-O2"]
-        base_ldflags: ["-march=rv64imafdc", "-mabi=lp64d", "-static"]
+        # Linux: usually no env / different flags. Adjust as you need.
+        env: { skip: true, files: [] }
+        cflags: ["-std=gnu99"]
+        ldflags: []
         libs: ["-lm"]
         includes: []
 
-# Workload specific configurations
-workloads:
-  embench-iot:
-    # Embench IoT specific flags, -Dtrue=1 and -Dfalse=0 to fix wikisort
-    workload_cflags: ["-Dtrue=1", "-Dfalse=0", "-I/workloads/embench-iot/support/"]
-    workload_ldflags: []
-    workload_defines: []
-    workload_includes: []
-
-    platforms:
-      baremetal:
-        workload_sources: ["/workloads/embench-iot/support/beebsc.c"]
-        environment_files: ["crt0.S", "main.c", "stub.c", "util.c"]
-    
-      linux:
-        workload_cflags: ["-std=gnu99"]
-        environment_files: ["main.c"]
-        
-        #skip_environment: true
-        #workload_sources: ["/.c"]
-
   riscv-tests:
-    workload_cflags: ["-std=gnu99", "-Wno-implicit-int", "-Wno-implicit-function-declaration"]
-    workload_ldflags: []
-    workload_defines: []
-    workload_includes: ["benchmarks/common"]
-    environment_files: ["crt0.S", "main.c", "stub.c", "util.c"]
-    
+    layout:
+      mode: per_benchmark
+      per_benchmark:
+        bench_root: "{workload_root}/benchmarks"
+        source_patterns: ["*.c", "*.S"]
+        exclude_dirs: ["common"]
+      common_patterns:
+        - "{workload_root}/benchmarks/common/*.c"
+      common_skip: []   # e.g., ["syscalls.c"] on Linux if you need
+    includes:
+      - "{workload_root}/benchmarks/common"
+      # add ISA sim env if needed:
+      # - "/riscv/condor.riscv-isa-sim/riscv-tests/env"
+      # - "/riscv/condor.riscv-isa-sim/riscv"
+    defines: []
+    cflags: ["-std=gnu99", "-Wno-implicit-int", "-Wno-implicit-function-declaration"]
+    ldflags: []
+    libs: []
+    env:
+      files: ["crt0.S", "main.c", "stub.c", "util.c"]
+      skip: false
+
     platforms:
       linux:
-        workload_cflags: ["-std=gnu99"]
-        skip_common_files: ["syscalls.c"]
-        skip_environment: true
-
-  dhrystone:
-    # Dhrystone specific flags (inherits from riscv-tests)
-    parent: riscv-tests
-    # Its preferred in Dhrystone to not patch the source code and fix errors using compiler flags
-    workload_cflags: ["-std=gnu99", "-Wno-implicit-int", "-Wno-implicit-function-declaration"]
-
-
-  #coremark: to be done
-  # this allows for future extension to other workloads
-
-# Features and special configurations
-features:
-  bbv:
-    bbv_cflags: ["-DBBV"]
-    bbv_ldflags: []
-
-  trace:
-    trace_cflags: ["-DTRACE"]
-    trace_ldflags: []
-
-  vector:
-    # Vector extension configuration for benchmarks starting with "vec-"
-    vector_rv32_arch: rv32gcv
-    vector_rv64_arch: rv64gcv
-    regular_rv32_arch: rv32gc
-    regular_rv64_arch: rv64gc
+        env: { skip: true }
+        cflags: ["-std=gnu99"]
+        # Often riscv-tests 'syscalls.c' conflicts under Linux; skip via common_skip:
+        layout:
+          common_skip: ["syscalls.c"]
