Add push and workflow_dispatch triggers to build
Signed-off-by: Srivarshitha M <mvarshitha17874@gmail.com>

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -2,6 +2,9 @@ on:
   pull_request:
     branches:
       - master
+  push:
+    branches: [ main ]
+  workflow_dispatch: 
 
 env:
   CACHE_VERSION: v1
