Modify GitHub Actions workflow for branch support
Updated workflow triggers to include both 'main' and 'master' branches for push and pull request events.

Signed-off-by: Srivarshitha M <mvarshitha17874@gmail.com>

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -1,10 +1,14 @@
 on:
-  pull_request:
-    branches:
-      - master
   push:
-    branches: [ main ]
-  workflow_dispatch: 
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+  workflow_dispatch:    
+    inputs:             
+      reason:
+        description: 'Reason for manual run'
+        required: false
+        default: 'Testing Git SHA output'
 
 env:
   CACHE_VERSION: v1
