--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library(instgen
 
 find_package(Boost REQUIRED COMPONENTS json)
 
-target_link_libraries(instgen stf zstd mavis Boost::json)
+target_link_libraries(instgen ${STF_LINK_LIBS} mavis Boost::json)
 
 get_property(SPARTA_INCLUDE_PROP TARGET SPARTA::sparta PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
 target_include_directories(core SYSTEM PRIVATE ${SPARTA_INCLUDE_PROP})
