--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -1,7 +1,14 @@
 on:
+  push:
+    branches: [ main, master ]
   pull_request:
-    branches:
-      - master
+    branches: [ main, master ]
+  workflow_dispatch:    
+    inputs:             
+      reason:
+        description: 'Reason for manual run'
+        required: false
+        default: 'Testing Git SHA output'
 
 env:
   CACHE_VERSION: v1
