--- a/core/fetch/CMakeLists.txt
+++ b/core/fetch/CMakeLists.txt
@@ -2,5 +2,8 @@ add_library(fetch
   Fetch.cpp
   ICache.cpp
   SimpleBranchPred.cpp
+  ../InstructionPrefetcher.cpp
+  ../NextLinePrefetchEngine.cpp
+  ../StridePrefetchEngine.cpp
 )
 target_link_libraries(fetch instgen)
