--- a/core/lsu/CMakeLists.txt
+++ b/core/lsu/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_library(lsu
   DCache.cpp
   LSU.cpp
+  ../DataPrefetcher.cpp
+  ../NextLinePrefetchEngine.cpp
+  ../StridePrefetchEngine.cpp
 )
