--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -6,10 +6,12 @@ top.cpu.params.topology: simple
 
 top.cpu.core0:
   fetch.params.num_to_fetch:   2
+  fetch.params.enable_prefetcher: true
   decode.params.num_to_decode: 2
   rename.params.num_to_rename: 2
   dispatch.params.num_to_dispatch: 2
   rob.params.num_to_retire:    2
+  lsu.params.enable_prefetcher: true
   dcache.params:
     l1_size_kb: 16
 
@@ -73,8 +75,3 @@ top.cpu.core0.rename.scoreboards:
       ["iq1",    1,     1,     1,     1,     1],
       ["iq2",    1,     1,     1,     1,     1],
       ["iq3",    1,     1,     1,     1,     1]]
-
-# Wiring for Prefetchers
-binds:
-  - top.cpu.core0.fetch.instruction_prefetcher.out_prefetcher_write top.cpu.core0.icache.in_fetch_req
-  - top.cpu.core0.lsu.data_prefetcher.out_prefetcher_write top.cpu.core0.dcache.in_lsu_lookup_req
