Add prefetcher parameters to small_core.yaml
Signed-off-by: pritish <pmdevops29@gmail.com>

--- a/arches/small_core.yaml
+++ b/arches/small_core.yaml
@@ -12,6 +12,12 @@ top.cpu.core0:
   rob.params.num_to_retire:    2
   dcache.params:
     l1_size_kb: 16
+  prefetcher.params:
+    enable_prefetcher: false
+    prefetcher_type:   "next_line"
+    num_to_prefetch:   2
+    cacheline_size:    64
+    req_queue_size:    8
 
 top.cpu.core0.extension.core_extensions:
   # this sets the pipe targets for each execution unit
