Add prefetcher source files to CMakeLists
Signed-off-by: pritish <pmdevops29@gmail.com>

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -28,6 +28,9 @@ add_library(core
   CPU.cpp
   CPUFactory.cpp
   CPUTopology.cpp
+  Prefetcher.cpp
+  NextLinePrefetchEngine.cpp
+  StridePrefetchEngine.cpp
 )
 
 add_library(instgen
