Add prefetcher subdirectory to CMakeLists
Signed-off-by: pritish <pmdevops29@gmail.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,4 +37,5 @@ add_subdirectory(core/icache)
 add_subdirectory(core/dcache)
 add_subdirectory(core/vector)
 add_subdirectory(core/unit_template)
+add_subdirectory(core/prefetcher)
 add_subdirectory(fusion)
