Remove Prefetcher_test target and update comments
Remove Prefetcher_test target and update comments for clarity.

Signed-off-by: pritish <pmdevops29@gmail.com>

--- a/core/prefetcher/CMakeLists.txt
+++ b/core/prefetcher/CMakeLists.txt
@@ -1,8 +1,3 @@
-project(Prefetcher_test)
-
-add_executable(Prefetcher_test Prefetcher_test.cpp)
-target_link_libraries(Prefetcher_test core mss mavis SPARTA::sparta)
-
-sparta_named_test(Prefetcher_test_nextline Prefetcher_test --testname nextline)
-sparta_named_test(Prefetcher_test_stride Prefetcher_test --testname stride)
-sparta_named_test(Prefetcher_test_edge_cases Prefetcher_test --testname edge_cases)
+# Prefetcher sources are now compiled as part of the core library.
+# This subdirectory is kept for backward compatibility but the
+# canonical test location is test/core/prefetcher/.
