Completed the refactoring as best as i could,build and tests working

--- a/test/core/common/CMakeLists.txt
+++ b/test/core/common/CMakeLists.txt
@@ -4,4 +4,7 @@ project(common_test)
 add_library(common_test
   SourceUnit.cpp
   )
-target_link_libraries(common_test PRIVATE core mavis SPARTA::sparta)
+target_include_directories(common_test
+    PUBLIC ${PROJECT_SOURCE_DIR}/..
+)
+target_link_libraries(common_test PRIVATE core_inst mavis SPARTA::sparta)
