--- a/test/core/dispatch/CMakeLists.txt
+++ b/test/core/dispatch/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(Dispatch_test)
 
 add_executable(Dispatch_test Dispatch_test.cpp)
-target_link_libraries(Dispatch_test core common_test ${STF_LINK_LIBS} mavis SPARTA::sparta)
+target_link_libraries(Dispatch_test core_cpu core_inst core_memory core_rob core_preloader core_utils core_sim_engine fetch decode rename dispatch execute vector lsu common_test ${STF_LINK_LIBS} mavis SPARTA::sparta)
 
 file(CREATE_LINK ${SIM_BASE}/mavis/json ${CMAKE_CURRENT_BINARY_DIR}/mavis_isa_files SYMBOLIC)
 file(CREATE_LINK ${SIM_BASE}/arches     ${CMAKE_CURRENT_BINARY_DIR}/arches          SYMBOLIC)
